Update README with test code locations and example configuration.

--- a/config.conf
+++ b/config.conf
@@ -64,5 +64,5 @@ applications {
   shell = zsh
   terminal = kitty
   terminal_text_editor = neovim
-  graphical_text_editor = neovim # TODO: Change
+  graphical_text_editor = neovim
 }
