Implement package management

--- a/test.conf
+++ b/test.conf
@@ -20,7 +20,11 @@ bakery {
  
 # variable
 $NUM_ORDERS = 3
- 
+$A = 2
+$AB = 4
+
+abc = $A, $AB, $A
+
 cakes {
     number = $NUM_ORDERS                    # use a variable
     colors = red, green, blue               # string
