Add verbose_pkg_lists and i_love_candy to default config

--- a/default_declarch.conf
+++ b/default_declarch.conf
@@ -16,6 +16,8 @@ packages {
   pacman {
     color = true
     parallel_downloads = 10
+    verbose_pkg_lists = false
+    i_love_candy = false
 
     # Repositories must specify a name, and can also specify a server and include (not required for official repositories).
     repository {
