Implement INI parser and patcher, pacman configuration management, and tags

--- a/default_declarch.conf
+++ b/default_declarch.conf
@@ -30,10 +30,11 @@ packages {
     #   name = multilib
     # }
 
-    package = linux-headers
-    package = linux-firmware
-    package = neovim
-    package = nano
+    package = man-db man-pages texinfo, +bare
+    package = linux-headers linux-firmware, +bare
+
+    package = neovim, +bare
+    package = nano, +bare
     package = bash
     package = sddm
     package = firefox
