Enhance INI parser to preserve original formatting and support customizable comment characters

--- a/default_declarch.conf
+++ b/default_declarch.conf
@@ -1,3 +1,10 @@
+config_parser {
+  # Whether to replace commented out defaults when updating configuration files.
+  # For example, in `/etc/pacman.conf`, '#ParallelDownloads = 5' is commented out by default,
+  # but if 'packages/pacman/parallel_downloads = 10' is set, then the commented out line will be replaced.
+  replace_comments = true
+}
+
 essentials {
   # The command to use for privilege escalation.
   privilege_escalation = sudo
