Add support for package command hooks

--- a/default_declarch.conf
+++ b/default_declarch.conf
@@ -54,6 +54,17 @@ packages {
     # Defaults to `makepkg`.
     helper = makepkg
   }
+
+  command_hooks {
+    # Example command to install the Rust toolchain using rustup
+    # hook {
+    #   package = rustup
+    #   for = install
+    #   timing = after
+    #   user = myuser
+    #   run = rustup toolchain install stable
+    # }
+  }
 }
 
 users {
