Add Flatpak support, extract tag logic, expand package list capabilities, and refactor apply logic

--- a/default_declarch.conf
+++ b/default_declarch.conf
@@ -11,12 +11,13 @@ essentials {
 
   # The top kernel is the default kernel.
   # The kernels will be installed in reverse order so that the top kernel is the default.
+  # The last kernel is treated as if it has the `+bare` tag.
   # If a kernel package from the AUR is required, then the package must be the last kernel in the AUR section.
   # Remember to add the kernel headers and firmware packages if necessary.
   kernel = linux
 
   network_handler = networkmanager
-  bootloader = grub
+  bootloader = grub efibootmgr
 }
 
 packages {
@@ -53,6 +54,33 @@ packages {
     # Otherwise, the specified helper is installed with makepkg.
     # Defaults to `makepkg`.
     helper = makepkg
+  }
+
+  flatpak {
+    # Whether to automatically install Flatpak if it is not already installed.
+    # Should be set to `false` to use a different package providing Flatpak.
+    # Defaults to true.
+    auto_install = true
+
+    # Remotes must specify a name and URL.
+    # Flatpak's `--user` and `--installation` flags can be used with `user_installation` and `installation`.
+    # Remotes can also specify `title`, `comment`, `description`, `homepage`, `icon`, and `default_branch`.
+    # Flathub is included by default on Arch Linux.
+    # remote {
+    #   name = flathub
+    #   url = https://dl.flathub.org/repo/flathub.flatpakrepo
+    # }
+
+    # Flatpak packages can be defined as a field similarly to other package managers.
+    package = com.github.tchx84.Flatseal
+
+    # Packages can also be defined in a `package` section for more complex configurations.
+    # The `name` field is required, and can be used identically to the `package` field.
+    # Flatpak's `--user` and `--installation` flags can be used with `user_installation` and `installation`.
+    # Packages can also specify `architecture` and `subpath`.
+    # package {
+    #   name = com.github.tchx84.Flatseal
+    # }
   }
 
   command_hooks {
