Move command hooks into their respective package manager sections

--- a/default_declarch.conf
+++ b/default_declarch.conf
@@ -46,6 +46,14 @@ packages {
     package = bash
     package = sddm
     package = firefox
+
+    # hook {
+    #   package = rustup
+    #   for = install  # "install" or "remove"
+    #   timing = after # "before" or "after"
+    #   user = myuser
+    #   run = rustup toolchain install stable
+    # }
   }
 
   aur {
@@ -54,6 +62,14 @@ packages {
     # Otherwise, the specified helper is installed with makepkg.
     # Defaults to `makepkg`.
     helper = makepkg
+
+    # hook {
+    #   package = some-aur-package
+    #   for = install  # "install" or "remove"
+    #   timing = after # "before" or "after"
+    #   user = myuser
+    #   run = some command to run
+    # }
   }
 
   flatpak {
@@ -81,16 +97,13 @@ packages {
     # package {
     #   name = com.github.tchx84.Flatseal
     # }
-  }
 
-  command_hooks {
-    # Example command to install the Rust toolchain using rustup
     # hook {
-    #   package = rustup
-    #   for = install
-    #   timing = after
+    #   package = com.some.flatpak
+    #   for = install  # "install" or "remove"
+    #   timing = after # "before" or "after"
     #   user = myuser
-    #   run = rustup toolchain install stable
+    #   run = some command to run
     # }
   }
 }
