Implement user management

--- a/default_declarch.conf
+++ b/default_declarch.conf
@@ -49,9 +49,9 @@ packages {
 
     # hook {
     #   package = rustup
-    #   for = install  # "install" or "remove"
-    #   timing = after # "before" or "after"
-    #   user = myuser
+    #   for = install  # "install" (default) or "remove"
+    #   when = after # "before" or "after" (default)
+    #   as = myuser
     #   run = rustup toolchain install stable
     # }
   }
@@ -65,9 +65,9 @@ packages {
 
     # hook {
     #   package = some-aur-package
-    #   for = install  # "install" or "remove"
-    #   timing = after # "before" or "after"
-    #   user = myuser
+    #   for = install  # "install" (default) or "remove"
+    #   when = after # "before" or "after" (default)
+    #   as = myuser
     #   run = some command to run
     # }
   }
@@ -82,6 +82,7 @@ packages {
     # Flatpak's `--user` and `--installation` flags can be used with `user_installation` and `installation`.
     # Remotes can also specify `title`, `comment`, `description`, `homepage`, `icon`, and `default_branch`.
     # Flathub is included by default on Arch Linux.
+    # 
     # remote {
     #   name = flathub
     #   url = https://dl.flathub.org/repo/flathub.flatpakrepo
@@ -94,46 +95,60 @@ packages {
     # The `name` field is required, and can be used identically to the `package` field.
     # Flatpak's `--user` and `--installation` flags can be used with `user_installation` and `installation`.
     # Packages can also specify `architecture` and `subpath`.
+    # 
     # package {
     #   name = com.github.tchx84.Flatseal
     # }
 
+    # For Flatpak hooks, the `package` field can either be the name like hooks for other package managers,
+    # or a more specific identifier in the format `[installation]:[name]`,
+    # where `[installation]` is the installation name, `default` for the default system-wide installation (`default:[name]`),
+    # or an empty string for the per-user installation (`:[name]`).
+    # 
     # hook {
     #   package = com.some.flatpak
-    #   for = install  # "install" or "remove"
-    #   timing = after # "before" or "after"
-    #   user = myuser
+    #   for = install  # "install" (default) or "remove"
+    #   when = after # "before" or "after" (default)
+    #   as = myuser
     #   run = some command to run
     # }
   }
 }
 
 users {
-  # The top user is the primary user unless the `primary` field is set to false.
-  # The `full_name` field is optional.
-  # The `sudoer` field defaults to false. It adds the user to the `wheel` group.
-  # If no users are sudoers, then the wheel group having sudo access is automatically disabled if it is not explicitly enabled.
-  # If no `shell` field is set, the defined default shell is used.
-
+  # The `username` field is required.
+  # The `full_name` and `shell` fields are optional.
+  # The `create_home` field defaults to true, and custom home directories can be set with the `home_dir` field.
+  # 
   # user {
   #   username = myuser
-  #   full_name = "My User"
-  #   shell = zsh
-  #   sudoer = true
+  #   full_name = My User
+  #   shell = bash
   # 
+  #   group = wheel
   #   group = docker
   # }
 
-  # You can explicitly enable or disable the wheel group's sudo access with the `wheel_sudo` field.
-  # This will cause the `wheel` group to have sudo access regardless of if any users are sudoers.
-  # wheel_sudo = true
+  # Like packages, users can also define hooks.
+  # 
+  # hook {
+  #   user = myuser
+  #   for = create # "create" (default) or "delete"
+  #   when = before # "before" or "after" (default)
+  #   as = root
+  #   run = sed -i '/^# %wheel ALL=(ALL:ALL) ALL$/c\%wheel ALL=(ALL:ALL) ALL' /etc/sudoers
+  # }
+
+  # The primary user will be used for all commands that aren't run as root.
+  # While the primary user is not required, it is recommended to set it since many features depend on it.
+  primary_user = myuser
 }
 
 # Applications can be known values (like `neovim`) or executables (like `nvim` or `/usr/bin/nvim`).
+# However, only some applications have mapped executable paths.
 applications {
   # display_manager = sddm
 
-  shell = bash
   # terminal = kitty
   terminal_text_editor = neovim
   graphical_text_editor = neovim
